# SFEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  setup  vcpkg.json
.github/workflows/: ci.yml  ci.yml.disabled
cmake/: ClangTools.cmake  CompilerWarnings.cmake  FetchDependencies.cmake  SFEngineConfig.cmake.in  Sanitizers.cmake
engine/: CMakeLists.txt
engine/include/SFEngine/Core/: Export.hpp
engine/include/SFEngine/assets/: AssetManager.hpp
engine/include/SFEngine/assets/backends/: AssetBackend.hpp  DebugBackend.hpp
engine/include/SFEngine/assets/readers/: AssetReader.hpp  FilesystemReader.hpp  PakFileReader.hpp
engine/include/SFEngine/utils/: ErrorHandlingMacros.hpp
engine/src/: main.cpp
engine/src/assets/: AssetManager.cpp
engine/src/assets/backends/: DebugBackend.cpp
engine/src/assets/readers/: FilesystemReader.cpp  PakFileReader.cpp
scripts/: pre-commit  setup
tests/: test_FilesystemReader  test_FilesystemReader.cpp
tests/assets_test/: hello.txt.meta.json
